--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </p>
             <p>
                 Given a position vector `vecv = << x,y >>`, the magnitude (or module) is found by 
-                `abs(vecv) = sqrt(x^2+y^2)`. And the direction is found by &theta; = tan <sup>-1</sup>`(y/x)`.
+                `abs(vecv) = sqrt(x^2+y^2)`. And the direction is found by `theta = tan^1 (y/x)`.
             </p>
             <p>
                 Given the magnitude and direction of a vector, its x component is found by x = cos&theta; and its 
