--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                 `abs(vecv) = sqrt(x^2+y^2)`.  And the direction is found by `theta = tan^1 (y/x)`.
             </p>
             <p>
-                Given the magnitude and direction of a vector, its x component is found by `x = costheta' and its 
-                y component is found `y = sintheta'.
+                Given the magnitude and direction of a vector, its x component is found by `x = costheta` and its 
+                y component is found `y = sintheta`.
             </p>
             <p>
                 click in the button to open an app that finds vector magnitude and direction given its components.
