--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 write the vector in component form as
             </p>
 
-            <p class="centered">
-                `vecv = << x,y >>`.
+            <p>
+                &emsp;`vecv = << x,y >>`.
             </p>
 
             <p>
