--- a/index.html
+++ b/index.html
@@ -311,12 +311,35 @@
                 we use the inverse tangent function.
             </p>
             <p>
-                Given a position vector `vecv = << x,y >>`, the magnitude (or module) is found by 
-                `abs(vecv) = sqrt(x^2+y^2)`.  And the direction is found by `theta = tan^1 (y/x)`.
+                Given a position vector `vecv = << x,y >>`, the magnitude (or module) is found by       
             </p>
+
             <p>
-                Given the magnitude and direction of a vector, its x component is found by `x = costheta` and its 
-                y component is found `y = sintheta`.
+                &emsp;`abs(vecv) = sqrt(x^2+y^2)`.
+            </p>
+                
+            <p>
+                And the direction is found by
+            </p>
+
+            <p>
+                &emsp13;`theta = tan^1 (y/x)`.
+            </p>
+
+            <p>
+                Given the magnitude and direction of a vector, its x component is found by  
+            </p>
+
+            <p>
+                `x = costheta`
+            </p>
+
+            <p>
+                and its y component is found by
+            </p>
+
+            <p>
+                `y = sintheta`.
             </p>
             <p>
                 click in the button to open an app that finds vector magnitude and direction given its components.
