--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </p>
 
             <p>
-                &emsp13;`theta = tan^1 (y/x)`.
+                &emsp;`theta = tan^1 (y/x)`.
             </p>
 
             <p>
@@ -331,7 +331,7 @@
             </p>
 
             <p>
-                `x = costheta`
+                &emsp;`x = costheta`
             </p>
 
             <p>
@@ -339,8 +339,9 @@
             </p>
 
             <p>
-                `y = sintheta`.
+                &emsp;`y = sintheta`.
             </p>
+            
             <p>
                 click in the button to open an app that finds vector magnitude and direction given its components.
                 <button onclick="openForm()">Open Form</button>
