--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 we use the inverse tangent function.
             </p>
             <p>
-                Given a position vector `vecv = << x,y >>`, the magnitude (or module) is found by       
+                Given a position vector `vecv = << x,y >>`, the <strong>magnitude (or module)</strong> is found by       
             </p>
 
             <p>
@@ -319,7 +319,7 @@
             </p>
                 
             <p>
-                And the direction is found by
+                And the <strong>direction</strong> is found by
             </p>
 
             <p>
@@ -327,7 +327,7 @@
             </p>
 
             <p>
-                Given the magnitude and direction of a vector, its x component is found by  
+                Given the magnitude and direction of a vector, its <strong>x component</strong> is found by  
             </p>
 
             <p>
@@ -335,13 +335,13 @@
             </p>
 
             <p>
-                and its y component is found by
+                and its <strong>y component</strong> is found by
             </p>
 
             <p>
                 &emsp;`y = sintheta`.
             </p>
-            
+
             <p>
                 click in the button to open an app that finds vector magnitude and direction given its components.
                 <button onclick="openForm()">Open Form</button>
