--- a/index.html
+++ b/index.html
@@ -343,9 +343,10 @@
             </p>
 
             <p>
-                click in the button to open an app that finds vector magnitude and direction given its components.
-                <button onclick="openForm()">Open Form</button>
+                Click in the button to open an app that finds vector magnitude and direction given its components. 
+                <br><button onclick="openForm()">Open Form</button>
             </p>
+
             <form id="coordToMagDir" style="display: none">
                 <h2>Calculate vector magnitude and direction from given coordinates</h2>
                 <label for="xCoordinate">
@@ -387,20 +388,20 @@
 
             <p>
                 The sum of two vectors given in its component form, `vecv = << x_1, y_1 >> ` and 
-                <b><i>w</i></b> = ` << x_2, y_2 >> `, is defined as
-            </p>
-
-            <p class="centered">
-                <b><i>v</i></b> + <b><i>w</i></b> = ` << x_1 + x_2, y_1 + y_2 >> `.
+                `vecw = << x_2, y_2 >> `, is defined as
             </p>
 
             <p>
-                The product of an scalar `lambda` and a vector <b><i>v</i></b>, given in its component form,
-                <b><i>v</i></b> = ` << x, y >> `, is defined as
+                &emsp; ` vecv + vecw = << x_1 + x_2, y_1 + y_2 >> `.
             </p>
 
-            <p class="centered">
-                 `lambda`<b><i>v</i></b> = ` << lambdax, lambday >> `
+            <p>
+                The product of an scalar `lambda` and a vector `vecv`, given in its component form,
+                `vecv = << x, y >> `, is defined as
+            </p>
+
+            <p>
+                &emsp; `lamdavecv = << lambdax, lambday >> `
             </p>
         </section>
 
