--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
             <h3>The unit vector</h3>
 
             <p>
-                A vector divided by its magnitude is a unit vector. The vector magnitude is an scalar, and dividing by
-                 a scalar is the same as multiplying by the reciprocal of the scalar.
+                A vector divided by its magnitude is a unit vector. The vector magnitude `abs(vecv) is an scalar, 
+                and dividing by a scalar is the same as multiplying by the reciprocal of the scalar .`1/abs(vecv)`.
             </p>
         </section>
 
