--- a/index.html
+++ b/index.html
@@ -409,12 +409,15 @@
             <h3>The unit vector</h3>
 
             <p>
-                The unit vector `vecu_v` of a non cero vector `vecv` is divided by its magnitude is a . The vector magnitude `abs(vecv)` is an scalar, 
-                and dividing by a scalar is the same as multiplying by the reciprocal of the scalar 1/`abs(vecv)`.
+                The <strong>unit vector</strong> `vecu_v` of a non cero vector `vecv` is a vector that has the same direction as `vecv` but a magnitude of 1. the unit vector is calculated as. 
             </p>
 
             <p>
-                &emsp; `abs(vecv)
+                &emsp; `vecu_v = vecv/abs(vecv)`
+            </p>
+
+            <p>
+                Note that vector magnitude `abs(vecv)` is an scalar, and dividing by a scalar is the same as multiplying by the reciprocal of the scalar 1/`abs(vecv)`.
             </p>
         </section>
 
