--- a/index.html
+++ b/index.html
@@ -421,6 +421,14 @@
             </p>
         </section>
 
+        <section>
+            <h3>Vector representation with unitary vectors i and j</h3>
+
+            <p>
+                In a two-dimensional space, a vector can be represented using unit vectors `bb"i"` and `bb"j"`. The unit vector i is a vector of length 1 along the x-axis, and the unit vector j is a vector of length 1 along the y-axis.
+            </p>
+        </section>
+
         <aside>
             <h3>References</h3>
             <!-- references to concepts used in this article. target="_blank" will display the link in a new tab.-->
