--- a/index.html
+++ b/index.html
@@ -422,11 +422,60 @@
         </section>
 
         <section>
-            <h3>Vector representation with unitary vectors i and j</h3>
+            <h3>Vector representation with unitary vectors i, j and k</h3>
 
             <p>
-                In a two-dimensional space, a vector can be represented using unit vectors `bb"i"` and `bb"j"`. The unit vector i is a vector of length 1 along the x-axis, and the unit vector j is a vector of length 1 along the y-axis.
+                In a two-dimensional space, a vector can be represented using unit vectors `bb"i"` and `bb"j"`. The unit vector `bb"i" is a vector of length 1 along the x-axis, and the unit vector `bb"j" is a vector of length 1 along the y-axis.
             </p>
+
+            <p>
+                If we have a vector given in its component form `vecv = << x, y >> `, it can be represented as:
+            </p>
+            
+            <p>
+                &emsp; `vecv =  xbb"i + ybb"j"`
+            </p>
+
+            <p>
+                If we have a vector given in its component form `vecv = << x, y, z >> `, it can be represented as:
+            </p>
+
+            <p>
+                In a three-dimensional space, a vector can be represented using unit vectors `bb"i", `bb"j"`, and `bb"k"`. The unit vector `bb"i" is a vector of length 1 along the x-axis, the unit vector `bb"j"` is a vector of length 1 along the y-axis, and the unit vector `bb"k" is a vector of length 1 along the z-axis.
+            </p>
+
+            <p>
+                &emsp; `vecv =  xbb"i + ybb"j" + zbb"k"` 
+            </p>
+
+            <p>
+                This vector sum is called a <strong>linear combination</strong> of the vectors `bb"i"`, `bb"j"` and `bb"k".
+            </p>
+        </section>
+
+        <section>
+            <h3>scalar product of two vectors</h3>
+
+            <p>
+                The scalar product (also known as the dot product) of two vectors is a number (scalar) that is obtained by multiplying the corresponding components of the two vectors and then adding those products.
+            </p>
+
+            <p>
+                If `vecv = << x_1, y_1, z_1 >> ` and `vecw = << x_2, y_2, z_2 >> ` are two vectors, then their scalar product is calculated as follows:
+            </p>
+
+            <p>
+                &emsp; `vecv*vecw = x_1*x_2 + y_1*y_2 + z_1*z_2`
+            </p>
+
+            <p>
+                In terms of magnitude and direction, the scalar product can also be defined as:
+            </p>
+
+            <p>
+                &emsp; `vecv*vecw = abs(vecv)abs(vecw)costheta`
+            </p>
+
         </section>
 
         <aside>
