--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <h3>Vector representation with unitary vectors i, j and k</h3>
 
             <p>
-                In a two-dimensional space, a vector can be represented using unit vectors `bb"i"` and `bb"j"`. The unit vector `bb"i" is a vector of length 1 along the x-axis, and the unit vector `bb"j" is a vector of length 1 along the y-axis.
+                In a two-dimensional space, a vector can be represented using unit vectors `bb"i"` and `bb"j"`. The unit vector `bb"i"` is a vector of length 1 along the x-axis, and the unit vector `bb"j"` is a vector of length 1 along the y-axis.
             </p>
 
             <p>
@@ -441,7 +441,7 @@
             </p>
 
             <p>
-                In a three-dimensional space, a vector can be represented using unit vectors `bb"i", `bb"j"`, and `bb"k"`. The unit vector `bb"i" is a vector of length 1 along the x-axis, the unit vector `bb"j"` is a vector of length 1 along the y-axis, and the unit vector `bb"k" is a vector of length 1 along the z-axis.
+                In a three-dimensional space, a vector can be represented using unit vectors `bb"i"`, `bb"j"`, and `bb"k"`. The unit vector `bb"i" is a vector of length 1 along the x-axis, the unit vector `bb"j"` is a vector of length 1 along the y-axis, and the unit vector `bb"k"` is a vector of length 1 along the z-axis.
             </p>
 
             <p>
@@ -449,7 +449,7 @@
             </p>
 
             <p>
-                This vector sum is called a <strong>linear combination</strong> of the vectors `bb"i"`, `bb"j"` and `bb"k".
+                This vector sum is called a <strong>linear combination</strong> of the vectors `bb"i"`, `bb"j"` and `bb"k"´.
             </p>
         </section>
 
