--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </p>
             
             <p>
-                &emsp; `vecv =  xbb"i + ybb"j"`
+                &emsp; `vecv =  xbb"i" + ybb"j"`
             </p>
 
             <p>
