--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
             </p>
 
             <p>
-                If we have a vector given in its component form `vecv = << x, y, z >> `, it can be represented as:
+                In a three-dimensional space, a vector can be represented using unit vectors `bb"i"`, `bb"j"`, and `bb"k"`. The unit vector `bb"i"` is a vector of length 1 along the x-axis, the unit vector `bb"j"` is a vector of length 1 along the y-axis, and the unit vector `bb"k"` is a vector of length 1 along the z-axis.
             </p>
 
             <p>
-                In a three-dimensional space, a vector can be represented using unit vectors `bb"i"`, `bb"j"`, and `bb"k"`. The unit vector `bb"i" is a vector of length 1 along the x-axis, the unit vector `bb"j"` is a vector of length 1 along the y-axis, and the unit vector `bb"k"` is a vector of length 1 along the z-axis.
+                If we have a vector given in its component form `vecv = << x, y, z >> `, it can be represented as:
             </p>
 
             <p>
@@ -449,7 +449,7 @@
             </p>
 
             <p>
-                This vector sum is called a <strong>linear combination</strong> of the vectors `bb"i"`, `bb"j"` and `bb"k"´.
+                This vector sum is called a <strong>linear combination</strong> of the vectors `bb"i"`, `bb"j"` and `bb"k"`.
             </p>
         </section>
 
