--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             </p>
 
             <p>
-                &emsp; `vecv =  xbb"i + ybb"j" + zbb"k"` 
+                &emsp; `vecv =  xbb"i" + ybb"j" + zbb"k"` 
             </p>
 
             <p>
