--- a/index.html
+++ b/index.html
@@ -476,6 +476,10 @@
                 &emsp; `vecv*vecw = abs(vecv)abs(vecw)costheta`
             </p>
 
+            <p>
+                where `theta` is the angle between `vecv` and `vecw`.
+            </p>
+
         </section>
 
         <aside>
