--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@
             <h3>Projection of one vector onto another.</h3>
 
             <p>
-                The <strong>projection of `veca` onto `vecb`</strong>, denoted as `proj_b veca`, is a vector that lies on `vecb` and has a direction same as `vecb` (if the angle between `veca` and `vecb` is less than 90 degrees) or opposite to `vecb` (if the angle between `veca` and `vecb` is more than 90 degrees). The magnitude of this projection vector is equal to the component of 'veca` in the direction of `vecb`, which can be calculated as:
+                The <strong>projection of `veca` onto `vecb`</strong>, denoted as `proj_b veca`, is a vector that lies on `vecb` and has a direction same as `vecb` (if the angle between `veca` and `vecb` is less than 90 degrees) or opposite to `vecb` (if the angle between `veca` and `vecb` is more than 90 degrees). The magnitude of this projection vector is equal to the component of `veca` in the direction of `vecb`, which can be calculated as:
             </p>
 
             <p>
-                &emsp; `abs(proj_b veca) = abs(veca)costheta
+                &emsp; `abs(proj_b veca) = abs(veca)costheta`
             </p>
 
             <p>
