--- a/index.html
+++ b/index.html
@@ -13,31 +13,24 @@
 <html lang="en">
 
 <head>
-    <!-- This element sets the character set your document should use to UTF-8 which includes most characters from the 
-        vast majority of written languages-->
+    <!-- This element sets the character set your document should use to UTF-8 which includes most characters from the vast majority of written languages-->
     <meta charset="utf-8">
 
     <!-- CODE TO EMBED FONTS FROM GOOGLE FONTS
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Math&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" 
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Math&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" 
-    rel="stylesheet">
-    -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"-->
 
     <link rel="stylesheet" href="styles/styles.css">
 
     <title>The House of Phi</title>
-    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. 
-        It is also used to describe the page when you bookmark/favorite it.-->
+    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. It is also used to describe the page when you bookmark/favorite it.-->
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
-        content="The Pre-Universitary Physics Area aims to provide Physics students with the necessary information to 
-        start a universitary Physics course. Making enphasys in example exercises where main Physics and Mathematics 
-        concepts are used. And providing references to these concepts">
+        content="The Pre-Universitary Physics Area aims to provide Physics students with the necessary information to start a universitary Physics course. Making enphasys in example exercises where main Physics and Mathematics concepts are used. And providing references to these concepts">
     <!-- LOAD THE MATHJAX LIBRARY start -->
     <!-- DOCS: https://docs.mathjax.org/en/latest/basic/mathematics.html -->
     <!-- DEMO: https://github.com/mathjax/MathJax-demos-web -->
@@ -51,20 +44,11 @@
     <!-- loads page script file-->
     <script src="scripts/main" defer></script>
 </head>
-<!-- some format tips:
-<b> ... </b> (bold),
-<i> ... </i> (italic)
-<strong> ... </strong> (strong importance)
-<em> ... </em> (stress emphasis)
-<sub> ... </sub> (subindex)
-<br> (line break)
--->
-<!--the body contains all the content that you want to show to web users when they visit your page-->
 
+<!--the body contains all the content that you want to show to web users when they visit your page-->
 <body>
     <header>
-        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, 
-            or styling -->
+        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
         <h1 id="Home">PRE-UNIVERSITARY PHYSICS</h1>
     </header>
 
