--- a/index.html
+++ b/index.html
@@ -469,9 +469,19 @@
             <h3>Projection of one vector onto another.</h3>
 
             <p>
-                The <strong>projection of `veca` onto `vecb`</strong>, denoted as `proj_b veca`, is a vector that lies on `vecb` and has a direction same as `vecb` (if the angle between `veca` and `vecb` is less than 90 degrees) or opposite to `vecb` (if the angle between `veca` and `vecb` is more than 90 degrees). The magnitude of this projection vector is equal to the component of `veca` in the direction of `vecb`, which can be calculated as:
+                The <strong>projection of `veca` onto `vecb`</strong>, denoted as `proj_b veca`, is a vector that lies on `vecb` and has a direction same as `vecb` (if the angle between `veca` and `vecb` is less than 90 degrees) or opposite to `vecb` (if the angle between `veca` and `vecb` is more than 90 degrees). 
             </p>
 
+            <figure class="centered">
+                <img src="images\VectorProjection.svg" width="250" height="215" />
+
+                <figcaption><b>Figure 1.5</b> Projection of `veca` onto `vecb`.</figcaption>
+            </figure>
+
+            <p>
+
+            </p>
+                The magnitude of this projection vector is equal to the component of `veca` in the direction of `vecb`, which can be calculated as:
             <p>
                 &emsp; `abs(proj_b veca) = abs(veca)costheta`
             </p>
