--- a/index.html
+++ b/index.html
@@ -1152,6 +1152,10 @@
             <p>&emsp; `df = (delf)/(delx)dx + (delf)/(dely)dy + (delf)/(delz)dz`</p>
         </section>
 
+        <section>
+            <h3></h3>
+        </section>
+
         <aside>
             <h3>References</h3>
             <!-- references to concepts used in this article. target="_blank" will display the link in a new tab.-->
